--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,3 +42,7 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
+secret:
+  -name: Use secret in script
+  run: echo "Using secret ${{ secrets.MY_SECRET_TOKEN }}"
